--- a/Generateur MCD MLD.csproj
+++ b/Generateur MCD MLD.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dictionnaire.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dictionnaire.Designer.cs">
+      <DependentUpon>Dictionnaire.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +63,10 @@
     <Compile Include="Ligne.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Dictionnaire.resx">
+      <DependentUpon>Dictionnaire.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
