--- a/Generateur MCD MLD.csproj
+++ b/Generateur MCD MLD.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6A85153B-AE5E-47B2-9AF7-545C61E592D4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dico.Designer.cs">
+      <DependentUpon>Dico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
