Signed-off-by: Alexandre Vallet <alex0122@free.fr>

--- a/Generateur MCD MLD.csproj
+++ b/Generateur MCD MLD.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="Ligne.cs" />
+    <Compile Include="LOAD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
