--- a/Generateur MCD MLD.csproj
+++ b/Generateur MCD MLD.csproj
@@ -66,12 +66,24 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCreation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCreation.Designer.cs">
+      <DependentUpon>frmCreation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ligne.cs" />
     <Compile Include="LOAD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.fr.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCreation.resx">
+      <DependentUpon>frmCreation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
